# AlgoQuest

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
bot/: __init__.py
bot/plugins/: __init__.py  basic.py  blacklist.py  emoji_reaction.py  problem_random.py  ranklist.py  submission.py
bot/services/: __init__.py  blacklist.py  branding.py  deepseek.py  emoji_reaction.py  group_config.py  help_text.py  html_render.py  permissions.py  problem_random.py  ranklist.py  submission.py
tests/: test_basic_help.py  test_blacklist.py  test_emoji_reaction.py  test_group_config.py  test_problem_rendering.py  test_ranklist.py  test_submission.py
