[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "algoquest"
version = "0.1.0"
description = "A QQ bot for algorithm contest quests and AI-assisted judging."
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "nonebot2[fastapi]>=2.4.0,<3.0.0",
    "nonebot-adapter-onebot>=2.4.0,<3.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "Pillow>=10.0.0,<13.0.0",
    "matplotlib>=3.8.0,<4.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "playwright>=1.40.0,<2.0.0",
    "cloudscraper>=1.2.71,<2.0.0",
    "pytest>=8.0.0,<9.0.0",
]

[tool.setuptools.packages.find]
include = ["bot*"]

[tool.nonebot]
plugins = [
    "bot.plugins.basic",
    "bot.plugins.problem_random",
    "bot.plugins.submission",
    "bot.plugins.ranklist",
    "bot.plugins.blacklist",
]
plugin_dirs = []
builtin_plugins = []
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]
